--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="./node_modules/babylonjs-materials/babylonjs.materials.js"></script>
         <script src="./libs/utils.js"></script>
         <script src="./instances/tree.js"></script>
+        <script src="./instances/kiki.js"></script>
         <script src="./classes/map.js"></script>
         <script src="./classes/unit.js"></script>
         <script src="./classes/cell.js"></script>
