Better rotation on move

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-        <title>Babylon.js sample code</title>
+        <title>RTS Game 3D</title>
 
         <script src="./node_modules/babylonjs/babylon.js"></script>
         <script src="./node_modules/cannon/build/cannon.js"></script>
@@ -15,7 +15,6 @@
         <script src="./classes/unit.js"></script>
         <script src="./classes/cell.js"></script>
         <script src="./classes/resource.js"></script>
-        <script src="./classes/item.js"></script>
 
         <style>
             html, body {
