--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
         <script src="./node_modules/cannon/build/cannon.js"></script>
         <script src="./node_modules/babylonjs-materials/babylonjs.materials.js"></script>
         <script src="./libs/utils.js"></script>
-        <script src="./instances/tree.js"></script>
         <script src="./instances/kiki.js"></script>
-        <script src="./classes/map.js"></script>
-        <script src="./classes/unit.js"></script>
+        <script src="./instances/plants.js"></script>
+        <script src="./instances/tree.js"></script>
         <script src="./classes/cell.js"></script>
+        <script src="./classes/map.js"></script>
         <script src="./classes/resource.js"></script>
+        <script src="./classes/unit.js"></script>
 
         <style>
             html, body {
